--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 <body>
     <div class="container">
         <div class="item first">
-            <h1>Long Lasting Pipes <br>Long Lasting <br>Relationships</h1>
-            <h6>Experience the difference with the Finolex <br>
-                Pipes, your trusted partner for plumbing <br>
-                and sanitation products.</h6>
-            <button class="first_Button"><a href="http://www.instagram.com"><span>Get in Touch  </span><img src="./assets/arrow-right.svg" alt=""></a></button>
+            <div>
+                <h1>Long Lasting Pipes <br>Long Lasting <br>Relationships</h1>
+                <h6>Experience the difference with the Finolex <br>
+                    Pipes, your trusted partner for plumbing <br>
+                    and sanitation products.</h6>
+                <button class="first_Button"><a href="http://www.instagram.com"><span>Get in Touch  </span><img src="./assets/arrow-right.svg" alt=""></a></button>
+            </div>
+            
         </div>
         <div class="item second ">
             <div class="contactUs">
