--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <p>Explore the strength and durability of Finolex ASTM Pipes. Built to last, these pipes are the ideal solution for water transportation and distribution, including potable water and industrial and saltwater lines.</p>
                     <div class="content-sub">
                         <div class="BandA">
-                            <div>
+                            <div class="inner-btns">
                                 <button class="inner-btn active">Benefits</button>
                                 <button class="inner-btn ">Applications</button>
                             </div>
