--- a/index.html
+++ b/index.html
@@ -405,9 +405,102 @@
                 </div>            
             </div>
         </div>
-        <div class="item fifth"></div>
-        <div class="item sixth "></div>
-        <div class="item seventh "></div>
+        <div class="item fifth">
+            <div class="whyFinolex-container">
+                <div>
+                    <p class="whyFinolex-heading">Why Choose Finolex Pipes</p>
+                </div>
+                <div class="whyFinolex-card-container">
+                    <div class="whyFinolex-card">
+                        <div class="card_circle">
+                            <img class="gif" src="./assets/verifiedblue.gif" alt="gif">
+                        </div>
+                        <div class="card-text">
+                            <span class="card-heading">Industry Leaders</span>
+                            <span class="card-subtext">backed by 41 years of expertise</span>
+                        </div>
+                    </div>
+                    <div class="whyFinolex-card">
+                        <div class="card_circle">
+                            <img class="gif" src="./assets/completeblue.gif" alt="gif">
+                        </div>
+                        <div class="card-text">
+                            <span class="card-heading">Industry Leaders</span>
+                            <span class="card-subtext">backed by 41 years of expertise</span>
+                        </div>
+                    </div>
+                    <div class="whyFinolex-card">
+                        <div class="card_circle">
+                            <img class="gif" src="./assets/connectionblue.gif" alt="gif">
+                        </div>
+                        <div class="card-text">
+                            <span class="card-heading">Industry Leaders</span>
+                            <span class="card-subtext">backed by 41 years of expertise</span>
+                        </div>
+                    </div>
+                    <div class="whyFinolex-card">
+                        <div class="card_circle">
+                            <img class="gif" src="./assets/handshakeblue.gif" alt="gif">
+                        </div>
+                        <div class="card-text">
+                            <span class="card-heading">Industry Leaders</span>
+                            <span class="card-subtext">backed by 41 years of expertise</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item sixth ">
+            <div class="partner-container">
+                <div class="partner-left">
+                    <h1 class="partner-heading">Partner With Us</h1>
+                    <p class="partner-subtext">Become a dealer or retailer, join our growing network of 21,000+ channel partners today.</p>
+                    <div class="partner-tab active-tab" data-img="./assets/partner-1.png">
+                        <h3 class="tab-heading active-tab">41 Years of leadership</h3>
+                        <p class="tab-subtext active-tab">in the growing PVC Pipes and fittings <br> industry</p>
+                    </div>
+                    <div class="partner-tab" data-img="./assets/partner-2.png">
+                        <h3 class="tab-heading">Wide Range of Top-Quality Pipes and Fittings</h3>
+                        <p class="tab-subtext ">for plumbing and sanitation</p>
+                    </div>
+                    <div class="partner-tab" data-img="./assets/partner-3.png">
+                        <h3 class="tab-heading">Preferred by Plumbers Across the Nation</h3>
+                        <p class="tab-subtext ">and recommended by contractors and consultants</p>
+                    </div>
+                    <div class="partner-tab" data-img="./assets/partner-4.png">
+                        <h3 class="tab-heading">Avail Faster Returns and Higher Revenue</h3>
+                        <p class="tab-subtext ">by becoming a part of the Finolex parivaar</p>
+                    </div>
+                </div>
+                <div class="partner-right">
+                    <img id="partner-img" src="./assets/partner-1.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="item seventh ">
+            <div class="testimonial-container">
+                <div class="testimonial-heading">
+                    <h1>Testimonials</h1>
+                </div>
+                <div class="testimonial-items">
+                    <div class="video-box">
+                        <video src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"></video>
+                        <div class="play-btn"></div>
+                        <p class="video-description">Switching to Finolex Pipes was the best decision I made for my plumbing needs. Their pipes are durable, reliable....</p>
+                    </div>
+                    <div class="video-box">
+                        <video src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"></video>
+                        <div class="play-btn"></div>
+                        <p class="video-description">Switching to Finolex Pipes was the best decision I made for my plumbing needs. Their pipes are durable, reliable....</p>
+                    </div>
+                    <div class="video-box">
+                        <video src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"></video>
+                        <div class="play-btn"></div>
+                        <p class="video-description">Switching to Finolex Pipes was the best decision I made for my plumbing needs. Their pipes are durable, reliable....</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="item eighth "></div>
         <div class="item ninth "></div>
     </div>
