--- a/index.html
+++ b/index.html
@@ -501,7 +501,82 @@
                 </div>
             </div>
         </div>
-        <div class="item eighth "></div>
+        <div class="item eighth ">
+            <div class="faq-container">
+                <div class="faq-heading">
+                    <h1>Frequently Asked Questions</h1>
+                </div>
+                <div class="faq-body">
+                    <div class="faq-body-left">
+                        <div class="faq-box">
+                            <div class="faq-question">
+                                <h3>What range are Finolex ASTM pipes available in</h3>
+                                <div><img src="./assets/plus.svg" alt=""></div>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                        <div class="faq-box">
+                            <div class="faq-question">
+                                <h3>Can Finolex ASTM Pipes be used for potable/drinking water?</h3>
+                                <div><img src="./assets/plus.svg" alt=""></div>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                        <div class="faq-box">
+                            <div class="faq-question">
+                                <h3>Is there a different solvent cement for different CPVC pipes?</h3>
+                                <div><img src="./assets/plus.svg" alt=""></div>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                        <div class="faq-box">
+                            <div class="faq-question">
+                                <h3>What range are Finolex CPVC pipes available in?</h3>
+                                <div><img src="./assets/plus.svg" alt=""></div>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="faq-body-right">
+                        <div class="faq-box">
+                            <div class="faq-question">
+                                <h3>What is the meaning of SWR pipe?</h3>
+                                <div><img src="./assets/plus.svg" alt=""></div>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                        <div class="faq-box">
+                            <div class="faq-question">
+                                <h3>Are Finolex sewerage pipes suitable for pressurised applications?</h3>
+                                <div><img src="./assets/plus.svg" alt=""></div>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                        <div class="faq-box">
+                            <div class="faq-question">
+                                <h3>What are the various types of Finolex sewerage pipes ?</h3>
+                                <div><img src="./assets/plus.svg" alt=""></div>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="item ninth "></div>
     </div>
 
