--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h6>Experience the difference with the Finolex <br>
                     Pipes, your trusted partner for plumbing <br>
                     and sanitation products.</h6>
-                <button class="first_Button"><a href="http://www.instagram.com"><span>Get in Touch  </span><img src="./assets/arrow-right.svg" alt=""></a></button>
+                <button class="first-button"><a href="http://www.instagram.com"><span>Get in Touch  </span><img src="./assets/arrow-right.svg" alt=""></a></button>
             </div>
             
         </div>
@@ -34,24 +34,24 @@
                 <form>
                     <div class="form">
                         <div class="formElements">
-                            <label for="firstName">First Name</label> <br>
-                            <input type="text" id="firstName" placeholder="Akhil">
+                            <label for="firstName">First Name*</label> <br>
+                            <input type="text" id="firstName" required placeholder="Akhil">
                         </div>
                         <div class="formElements">
-                            <label for="lastName">Last Name</label> <br>
-                            <input type="text" id="lastName" placeholder="Anil">
+                            <label for="lastName">Last Name*</label> <br>
+                            <input type="text" id="lastName" required placeholder="Anil">
                         </div>
                         <div class="formElements">
-                            <label for="phNumber">Phone Number</label> <br>
-                            <input type="password" id="phNumber" placeholder="9999999999">
+                            <label for="phNumber">Phone Number*</label> <br>
+                            <input type="password" id="phNumber" required placeholder="9999999999">
                         </div>
                         <div class="formElements">
-                            <label for="email">Email</label> <br>
-                            <input type="email" id="email" placeholder="yourname@email.com">
+                            <label for="email">Email*</label> <br>
+                            <input type="email" id="email" required placeholder="yourname@email.com">
                         </div>
                         <div class="formElements">
-                            <label for="state">State</label> <br>
-                            <select name="state" id="state">
+                            <label for="state">State*</label> <br>
+                            <select name="state" required id="state">
                                 <option value="" disabled selected>-select-</option>
                                 <option value="Andhra Pradesh">Andhra Pradesh</option>
                                 <option value="Arunachal Pradesh">Arunachal Pradesh</option>
@@ -84,24 +84,24 @@
                             </select>
                         </div>
                         <div class="formElements">
-                            <label for="interest">Interested In</label> <br>
-                            <select name="interest" id="interest">
-                                <option value="" disabled selected>-select-</option>
+                            <label for="interest">Interested In*</label> <br>
+                            <select name="interest" required id="interest">
+                                <option value=""  disabled selected>-select-</option>
                                 <option value="sample1">Sample 1</option>
                                 <option value="sample2">Sample 2</option>
                             </select>
                         </div>
                         <div class="formElement">
-                            <label for="city">City</label> <br>
-                            <input type="text" id="city" placeholder="Mumbai">
+                            <label for="city">City*</label> <br>
+                            <input type="text" id="city" required placeholder="Mumbai">
                         </div>
                         <div class="formElement">
-                            <label for="pincode">Pincode</label> <br>
+                            <label for="pincode">Pincode*</label> <br>
                             <input type="text" id="pincode" placeholder="689645">
                         </div>
                         <div class="formElements">
                             <label for="remarks">Remarks</label> <br>
-                            <input type="text" id="remarks" placeholder="">
+                            <input type="text" id="remarks" required placeholder="">
                         </div>
                         <input class="submitButton" type="button" value="Submit">
                     </div>
@@ -577,7 +577,18 @@
                 </div>
             </div>
         </div>
-        <div class="item ninth "></div>
+        <div class="item ninth ">
+            <div class="about-top">
+                <div class="about-container">
+                    <h1>About Finolex Industries</h1>
+                    <p>For the last 40 years, Finolex Industries Ltd (FIL) has been India's leading manufacturer of PVC pipes and fittings. Our dedication to quality and excellence has had a significant impact on the sanitation-plumbing and agricultural industries. <br><br>
+                        With ISO 9001:2015 certifications across our plants, we've earned the trust of our customers, partners, associates, and shareholders. They know they can expect the best from Finolex Pipes, because we demand nothing less from ourselves. <br><br>
+                        We're Finolex Industries Limited, India's leading pipe experts</p>
+                        <button class="about-button"><a href="https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf"><span>Download Brochure  </span><img src="./assets/icon-download.svg" alt=""></a></button>
+                </div>
+                <div class="about-bottom"></div>
+            </div>
+        </div>
     </div>
 
     <script src="./index.js"></script>
